force-app/main/default/objects/vlocity_cmt__OrderProductRollup__c/vlocity_cmt__OrderProductRollup__c.object-meta.xml
<CustomObject>
    <description>Stores Product and Category Quantity rollups for Order.</description>
    <label>Order Product Rollup</label>
    <nameField>
        <label>Order Product Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Product Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>