force-app/main/default/objects/vlocity_cmt__OrderProductRollup__c/fields/vlocity_cmt__NeedsPricing__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NeedsPricing__c</fullName>
    <formula>(VALUE(vlocity_cmt__CurrentDiscountRange__c) - VALUE(vlocity_cmt__PreviousDiscountRange__c)) != 0.0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Pricing</label>
    <type>Checkbox</type>
</CustomField>