force-app/main/default/objects/vlocity_cmt__OrderProductRollup__c/fields/vlocity_cmt__OrderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrderId__c</fullName>
    <description>Stores the Order Id for which the rollup quantity is stored.</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Product Rollups</relationshipLabel>
    <relationshipName>OrderProductRollups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>