force-app/main/default/objects/vlocity_cmt__OrderProductRollup__c/fields/vlocity_cmt__PreviousDiscountRange__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PreviousDiscountRange__c</fullName>
    <label>Previous Discount Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>