force-app/main/default/objects/vlocity_cmt__OrderProductRollup__c/fields/vlocity_cmt__RollupType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__RollupType__c</fullName>
    <label>Rollup Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Total Group Rollup</fullName>
            </value>
            <value>
                <fullName>Total Order Rollup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>