force-app/main/default/objects/vlocity_cmt__OrderProductRollup__c/fields/vlocity_cmt__TotalOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TotalOrderQuantity__c</fullName>
    <description>Stores the total rollup quantity</description>
    <label>Total Order Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>